# custom-k8s-objects-robusta-playbook

./: README.MD  extra_values.yaml  pyproject.toml
cluster_automation/: custom_k8s_objects.py
