[tool.poetry]
name = "custom_k8s_objects"
version = "0.0.1"
description = "Custom k8s object Robusta Playbook"
authors = ["moraesjeremias <moraesjeremias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"

[build-system]
robusta-cli = "^0.10.16"
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
